--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.1",
+    "nodemailer": "^6.7.8",
     "validator": "^13.7.0"
   }
 }
