--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,24 @@
 {
     "cSpell.words": [
+        "activationkey",
+        "allowupdates",
+        "changepassword",
+        "changepwd",
+        "confirmnew",
         "Credintials",
         "datenow",
+        "forgetpassword",
+        "hashednew",
+        "iossrpmwotsdsdcg",
         "lastlogin",
+        "logouttoken",
+        "mailoptions",
         "promotool",
+        "resetlink",
         "SECRETKEY",
         "thisisthetoken",
         "Userauth",
-        "userr"
+        "userr",
+        "userrr"
     ]
 }
