--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "exceljs": "^4.3.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xlsx": "^0.18.5"
   }
 }
